 * Add isolated flush timer to CommitLogMetrics and ensure writes correspond to single WaitingOnCommit data points (CASSANDRA-16701)
 * Add a system property to set hostId if not yet initialized (CASSANDRA-14582)
 * GossiperTest.testHasVersion3Nodes didn't take into account trunk version changes, fixed to rely on latest version (CASSANDRA-16651)
Merged from 4.0:
 * Fixed broken classpath when multiple jars in build directory (CASSANDRA-17129)
 * DebuggableThreadPoolExecutor does not propagate client warnings (CASSANDRA-17072)
 * internode_send_buff_size_in_bytes and internode_recv_buff_size_in_bytes have new names. Backward compatibility with the old names added (CASSANDRA-17141)
 * Remove unused configuration parameters from cassandra.yaml (CASSANDRA-17132)
 * Queries performed with NODE_LOCAL consistency level do not update request metrics (CASSANDRA-17052)
 * Fix multiple full sources can be select unexpectedly for bootstrap streaming (CASSANDRA-16945)
 * Fix cassandra.yaml formatting of parameters (CASSANDRA-17131)
 * Add backward compatibility for CQLSSTableWriter Date fields (CASSANDRA-17117)
 * Push initial client connection messages to trace (CASSANDRA-17038)
 * Correct the internode message timestamp if sending node has wrapped (CASSANDRA-16997)
 * Avoid race causing us to return null in RangesAtEndpoint (CASSANDRA-16965)
 * Avoid rewriting all sstables during cleanup when transient replication is enabled (CASSANDRA-16966)
 * Prevent CQLSH from failure on Python 3.10 (CASSANDRA-16987)
 * Avoid trying to acquire 0 permits from the rate limiter when taking snapshot (CASSANDRA-16872)
 * Remove all the state pollution between tests in SSTableReaderTest (CASSANDRA-16888)
 * Delay auth setup until after gossip has settled to avoid unavailables on startup (CASSANDRA-16783)
 * org.apache.cassandra.db.rows.ArrayCell#unsharedHeapSizeExcludingData includes data twice (CASSANDRA-16900)
 * Fix clustering order logic in CREATE MATERIALIZED VIEW (CASSANDRA-16898)